# fast-test-database

./: .gitignore  .releaserc.json  .travis.yml  Makefile  README.md  README.rst  fast_test_database.py  install-dev  lint  pyproject.toml  renovate.json5  setup.cfg  setup.py  test-script  test_requirements.txt  tests.py  tox.ini
.github/workflows/: main.yaml
fast_test_database/: __init__.py
test_app/test_app/: settings.py  urls.py
tests/test_app/test_app/: settings.py
