[tool.poetry]
name = "fast-test-database"
version = "0.0.0"
description = "Configure an in-memory database for running Django tests"
authors = ["Alexey Kotlyarov <a@koterpillar.com>"]
license = "GPL-3.0-or-later"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.2.5"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mysqlclient = "^2.2.7"
psycopg2 = "^2.9.10"
pycodestyle = "^2.14.0"

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"
